traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:7: error: value update is not a member of Int
    if (getX()=diag && getY()=diag){
        ^TraversalDiagonal:7: error: value && is not a member of Int
    if (getX()=diag && getY()=diag){
                    ^