traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code

override def run() {
  var diag = 0
  var count = 0
  var L=getMondeLargeur()
  var H=getMondeHauteur()
  while (PositionFinale()==false){
    if (getX()=diag && getY()=diag){
      setX(0);setY(diag-1)
      diag=diag+1
      
    }
    else{
      setX(getX()+1);setY(getY()+1)
    }
    ecritMessage(count)
    count=count+1
  }
}


def PositionFinale() : Boolean = {
  var H=getMondeHauteur()
  var L=getMondeLargeur()
  if (getX()+1==L && getY()+1==H){
    return true
  }
  return false
}